# vcc-compiler-collection

./: .gitignore  CMakeLists.txt  README.md  format.sh
docs/: standard.md  todo.md
include/core/: ast.h  context.h  driver.h  lex.h  parser.h  sema.h  stream.h  symbol_table.h  type.h  util.h
src/: CMakeLists.txt  ast.cpp  context.cpp  driver.cpp  lex.cpp  main.cpp  parser.cpp  sema.cpp  stream.cpp  symbol_table.cpp  type.cpp
src/core/: CMakeLists.txt  ast.cpp  context.cpp  driver.cpp  lex.cpp  parser.cpp  sema.cpp  stream.cpp  symbol_table.cpp  type.cpp
src/core/include/: ast.h  context.h  driver.h  lex.h  parser.h  sema.h  stream.h  symbol_table.h  type.h  util.h
src/ffi/: CMakeLists.txt  main.cpp
src/include/: ast.h  context.h  driver.h  lex.h  parser.h  sema.h  stream.h  symbol_table.h  type.h  util.h
stdlib/: .gitignore  Makefile  libvcc.c  main.vcc  sdl-wrapper.c
syntax/: README.md  mylang.vim  vcc.vim
test/: CMakeLists.txt  comp.cpp  lex.cpp  stream.cpp  testing.txt  type.cpp
test/program/: cast-test.vcc  deref-struct.txt  external-function-decl.vcc  ref-test.txt  ref-test.vcc  string.txt  void-function.txt
test/resource/: binary_operator.txt  comp.txt  lex_end_of_file.vcc  new_line_loc_test.txt  streamtest.txt
